@@ -1,0 +1,37 @@
+/*
+ *  This program is free software; you can redistribute it and/or modify
+ *  it under the terms of the GNU General Public License as published by
+ *  the Free Software Foundation; either version 2 of the License, or
+ *  (at your option) any later version.
+ *
+ *  This program is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *  GNU General Public License for more details.
+ *
+ *  You should have received a copy of the GNU General Public License
+ *  along with this program; if not, write to the Free Software
+ *  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
+ */
+
+#import <Cocoa/Cocoa.h>
+#import "msgbox.h"
+
+void
+log_displayBox (const /*UTF-8*/char *title, int isError,
+		const /*UTF-8*/char *msg)
+{
+	NSString *titleStr = [NSString stringWithUTF8String:title];
+	NSString *msgStr = [NSString stringWithUTF8String:msg];
+
+	if (!titleStr || !msgStr)
+		return; // Oops, out of memory?
+
+	if (isError)
+		NSRunCriticalAlertPanel (titleStr, msgStr, nil, nil, nil);
+	else
+		NSRunInformationalAlertPanel (titleStr, msgStr, nil, nil, nil);
+
+	// titleStr and msgStr are autoreleased
+}
+
